Info seeking, Diagnosis, Confidence
Current bugs/actions:
- Need to remove tests upon ordering another in the same category
- Clicking continue on confidence not moving to next trial
- Check data saving
- Trials for generating hypotheses

--- a/style/styleIST.css
+++ b/style/styleIST.css
@@ -740,6 +740,24 @@ button, .button {
   -webkit-user-select: none;
 }
 
+#jspsych-survey-multi-choice-next {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  border: 0;
+  padding: 1.5vmax;
+  font-family: europa, Arial, Helvetica, sans-serif;
+  text-align: center;
+  font-weight: bolder;
+  cursor: pointer;
+  user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -webkit-user-drag: none;
+  -webkit-user-select: none;
+}
+
 button.large-green-button, .button.large-green-button {
   width: 30vmax;
   margin: 5vh auto;
