--- a/style/styleIST.css
+++ b/style/styleIST.css
@@ -742,6 +742,7 @@ button, .button {
 
 div.jspsych-image-button-response-button button {
   color: red;
+  margintop: 2em;
 }
 
 #jspsych-survey-multi-choice-next {
