--- a/style/styleIST.css
+++ b/style/styleIST.css
@@ -195,6 +195,7 @@ body, html {
   -ms-text-size-adjust: 100%;
   text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
+  font-size: larger;
 }
 
 a {
@@ -738,6 +739,7 @@ button, .button {
   -ms-user-select: none;
   -webkit-user-drag: none;
   -webkit-user-select: none;
+  font-size: large;
 }
 
 div.jspsych-image-button-response-button button {
